--- a/C/C.vcxproj.filters
+++ b/C/C.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="Heaps.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Graphs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
