--- a/C/C.vcxproj.filters
+++ b/C/C.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="Graphs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="temp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
