Almost all the Data structure programs for File are complete just some rechecking needed

--- a/C++/C++.vcxproj
+++ b/C++/C++.vcxproj
@@ -140,6 +140,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Heaps.h" />
+    <ClInclude Include="PeekFinding.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
