--- a/C++/C++.vcxproj.filters
+++ b/C++/C++.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClInclude Include="Heaps.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PeekFinding.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
