--- a/C/C.vcxproj.filters
+++ b/C/C.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="temp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PeekFinding.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
