--- a/C/C.vcxproj
+++ b/C/C.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="Graphs.h" />
     <ClInclude Include="Heaps.h" />
     <ClInclude Include="LinkedList.h" />
+    <ClInclude Include="PeekFinding.h" />
     <ClInclude Include="Queue.h" />
     <ClInclude Include="Stack.h" />
     <ClInclude Include="temp.h" />
